@@ -45,13 +45,7 @@ public class VectorPmtilesManager {
       new ConcurrentHashMap<>();
   private final ConcurrentHashMap<String, VectorTileCache> caches = new ConcurrentHashMap<>();
 
-  private final ExecutorService cacheWriter =
-      Executors.newSingleThreadExecutor(
-          r -> {
-            Thread t = new Thread(r, "vector-tile-cache-writer");
-            t.setDaemon(true);
-            return t;
-          });
+  private final ExecutorService cacheWriter = Executors.newVirtualThreadPerTaskExecutor();
 
   public VectorPmtilesManager(LayerStore layerStore, XyzConfiguration xyzConfig) {
     this.layerStore = layerStore;
@@ -61,13 +55,13 @@ public class VectorPmtilesManager {
   @PostConstruct
   void init() {
     layerStore.getLayers().values().stream()
-        .filter(l -> l.getSourceType() == Layer.SourceType.VECTOR_PMTILES)
+        .filter(l -> l.sourceType() == Layer.SourceType.VECTOR_PMTILES)
         .forEach(this::initLayer);
   }
 
   public void initLayer(Layer layer) {
-    String layerId = layer.getEffectiveId();
-    String source = layer.getUrlTemplate();
+    String layerId = layer.effectiveId();
+    String source = layer.urlTemplate();
 
     Path layerDir = layerDir(layerId);
     List<Path> pmtilesFiles = new ArrayList<>(findAllPmtiles(layerDir));
@@ -131,11 +125,11 @@ public class VectorPmtilesManager {
   public void notifyFileAvailable(Path filePath) {
     String pathStr = filePath.toAbsolutePath().normalize().toString();
     layerStore.getLayers().values().stream()
-        .filter(l -> l.getSourceType() == Layer.SourceType.VECTOR_PMTILES)
-        .filter(l -> pathStr.equals(l.getUrlTemplate()))
+        .filter(l -> l.sourceType() == Layer.SourceType.VECTOR_PMTILES)
+        .filter(l -> pathStr.equals(l.urlTemplate()))
         .forEach(
             l -> {
-              closeLayer(l.getEffectiveId());
+              closeLayer(l.effectiveId());
               initLayer(l);
             });
 
@@ -143,7 +137,7 @@ public class VectorPmtilesManager {
     if (parent != null) {
       String layerId = parent.getFileName().toString();
       Layer layer = layerStore.getLayers().get(layerId);
-      if (layer != null && layer.getSourceType() == Layer.SourceType.VECTOR_PMTILES) {
+      if (layer != null && layer.sourceType() == Layer.SourceType.VECTOR_PMTILES) {
         closeLayer(layerId);
         initLayer(layer);
       }
@@ -152,10 +146,13 @@ public class VectorPmtilesManager {
 
   @EventListener
   void onLayerChanged(LayerChangedEvent event) {
+    if (event.kind() == LayerChangedEvent.Kind.UPDATED_ACL) {
+      return;
+    }
     String layerId = event.layerName();
     closeLayer(layerId);
     Layer layer = layerStore.getLayers().get(layerId);
-    if (layer != null && layer.getSourceType() == Layer.SourceType.VECTOR_PMTILES) {
+    if (layer != null && layer.sourceType() == Layer.SourceType.VECTOR_PMTILES) {
       initLayer(layer);
     }
   }
@@ -198,6 +195,7 @@ public class VectorPmtilesManager {
     if (resolvedUrl == null || resolvedUrl.isBlank()) return;
     HttpClient httpClient =
         HttpClient.newBuilder()
+            .followRedirects(HttpClient.Redirect.NORMAL)
             .connectTimeout(Duration.of(xyzConfig.getTileTimeoutSeconds(), ChronoUnit.SECONDS))
             .build();
     RemotePmtilesReader reader =
